Future release (not yet released!)
----------------------------------

Bug fixes
'''''''''

    * fix crashs on Gtk.TextView when updating the lyrics of a song
    * Fix streams parsing:
      https://github.com/multani/sonata/issues/41
      https://github.com/multani/sonata/issues/38
    * fix withdrawn mode by fixing incorrect usage of threads and Gtk
      eco-system
    * choosing a local artwork wasn't working anymore

Internal changes
''''''''''''''''

    * slightly better performance when updating the library
    * threading improvements:

      - use GIO instead of a thread to download drag-and-droped covers
      - remove the MPD from a dedicated thread. It works as good (if not
        better) as before since the threaded code was poorly written anyway and
        rendered the additionnal basically useless. This move is not definitive
        but something better will probably come up some day.


1.7a2 (2013-11-26)
------------------

New features
''''''''''''

    * Download bigger covers from Last.fm
    * Centering the current song using Ctrl+i now also selects the current song
    * Use Transifex as a translation plateform. See
      https://www.transifex.com/projects/p/sonata/
    * Update translations:

        - Russian (thanks Stas!)
        - Ukrainian (thanks Stas!)
        - French (thanks Jon!)

Bug fixes
'''''''''

    * Fix search in library (using a specific filter or the 'everything' filter)
    * Fix scrobbling to Last.fm
    * Scrolling with the mouse wheel on the tray icon correctly changes the volume
    * Some lyrics from LyricsWiki redirects to another page. The plugin now
      follows those redirect to find the actual lyrics.
    * Fix multiple issues related to drag-and-drop of songs in the current playlist
    * Fix error while using Sonata's command line interface
    * Fix filtering songs in the current playlist
    * Fix DND of custom artwork images in the main window