@@ -1,6 +1,14 @@
 Future release (not yet released!)
 ----------------------------------
 
+New features
+''''''''''''
+
+    * redirect to the localized Wikipedia according to the user's local,
+      instead of redirecting to the English one.
+      https://github.com/multani/sonata/issues/61
+
+
 Bug fixes
 '''''''''
 
